2007-02-10 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/funcs.h: Removed quit_func since it is completely unused.

2007-02-10 Carlos Nieves Onega <cnieves@iespana.es>

	* autogen.sh: Added automake version number check.

2007-02-10  Mike Jarabek  <mjarabek@sentex.ca>

	* include/struct.h, src/o_text_basic.c, src/s_toplevel.c: Added
	code to scale the output postscript font under user control.  This
	is controlled via the postscript-font-scale rc keyword.

2007-02-10  Mike Jarabek  <mjarabek@sentex.ca>

	* src/f_print.c: Applied Wojciech Kazubski's patch for offset
	printing orgins. Fixes bug #160757

2007-01-16 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/o_arc_basic.c: Applied patch by Peter Clifton to fix
	the output of arcs when using libgd.

	* src/Makefile.am: Applied patch by Peter Clifton to add --silent to
	libtool.

2007-01-08 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/prototype.h, src/Makefile.am, src/o_embed.c: Moved
	o_embed(...) and o_unembed(...) into o_embed.c so that gschlas
	can also call these useful functions (to support scriptable 
	embedding and unembedding of components).

	* src/.cvsignore: Oops, remove obsolete *.c rule that was causing
	cvs to ignore new (but not added) C files.

2006-12-26 Carlos Nieves Onega <cnieves@iespana.es>

	* include/prototype.h, src/g_smob.c:
	  Added a new scheme function: get-page-filename, returning
	  the page filename of the given page.
	
2006-12-21 Peter Brett   <peter@peter-b.co.uk>

	* include/prototype.h, src/o_selection.c: Update interface of
	o_selection_print_all() to match other o_selection_*() functions. Pass 
	the GList by reference.

	* include/prototype.h: Comment o_selection_select() and
	o_selection_unselect() as deprecated (should only be used internally to
	libgeda).

	* include/prototype.h, src/o_net_basic.c, src/o_selection.c:
	Update interface of o_selection_add() to match
	o_selection_remove(). Pass the GList by reference so head can be
	updated.
	